--- a/index.css
+++ b/index.css
@@ -2,20 +2,11 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    padding:0px;
-    margin:0px;
-    max-width:100vw;
-    overflow-x:hidden;
-    scroll-behavior: smooth;
 }
-#loading {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    background: white;
-    z-index: 999;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+
+
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 45px;
+    font-weight: bold;
 }
