--- a/index.css
+++ b/index.css
@@ -5,8 +5,7 @@ body {
 }
 
 
-h1 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 45px;
-    font-weight: bold;
+#about h1 {
+    font-size:45px;
+    word-wrap:break-word;
 }
